--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,3 +37,7 @@ types-pyyaml = "^6.0.12.20240917"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.isort]
+profile = "black"
+line_length = 79
